--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	</style>
 </head>
 <body>
-	<h1>Pruba de nexos group</h1>
+	<h1>Envia email</h1>
 	<span>El correo remitente es un correo que yo cree para efecto de esta demostración
-		porfavor utilizarlo con responsabilidad
+		porfavor utilizarlo adecuadamente
 	</span>
 	<div>
 		
